--- a/src/app/components/judge/introduccion/introduccion.component.html
+++ b/src/app/components/judge/introduccion/introduccion.component.html
@@ -4,29 +4,13 @@
       <div class="title">Juez Virtual Para Compiladores</div>
       <div class="description">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lorem blandit, bibendum lectus quis,
-          malesuada augue. Nam ac massa id dolor lobortis volutpat egestas ut velit. In luctus metus quis velit
-          tristique auctor. Donec finibus sodales leo, pretium lacinia sapien venenatis id. Sed euismod eros ac elit
-          fermentum, eu sodales nisi lobortis. Morbi molestie dolor massa. Etiam ac auctor dolor, id pellentesque velit.
-          Donec blandit convallis lorem vel scelerisque. Nullam pellentesque neque eu feugiat pellentesque. Pellentesque
-          pretium commodo mauris a dictum. Integer id erat lobortis, hendrerit justo vitae, ornare turpis. Suspendisse
-          potenti. Sed vel sapien ullamcorper, malesuada lacus sed, hendrerit diam.
-        </p>
-        <p>
-          Sed finibus, quam in blandit bibendum, justo dui auctor mauris, eu tempus sapien felis quis nulla. Nulla
-          dapibus diam erat, gravida tincidunt nisi dapibus non. Donec efficitur neque vel orci eleifend dictum. Mauris
-          tempus consectetur nisi, fermentum placerat mauris placerat eget. Duis in luctus velit, vel sollicitudin sem.
-          Aliquam varius libero leo, at ultricies lacus dapibus nec. Aliquam molestie nec nunc vitae feugiat. Nullam et
-          mi id arcu sollicitudin euismod et vitae augue. Etiam justo risus, sollicitudin venenatis erat sed,
-          ullamcorper ultricies tellus.
-        </p>
-        <p>
-          In ut lobortis libero. Proin imperdiet vel diam vitae varius. Sed elementum, eros nec auctor rhoncus, dolor
-          nulla finibus lectus, ac varius mauris elit vitae felis. Sed tortor sem, varius sit amet urna ac, tempus
-          posuere orci. Integer bibendum metus a accumsan ullamcorper. Nunc a mauris vitae enim mollis ultrices. Etiam
-          interdum quam vel libero accumsan tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-          Quisque at purus at libero auctor molestie. Vestibulum vel dictum quam.
-
+          Una herramienta de estudio para programación competitiva busca de manera óptima, reforzar los conocimientos, y
+          el proceso de aprendizaje para aquellos que deseen ser parte de un equipo de programación competitiva, o un
+          grupo de estudio, todo esto centrándose en temáticas típicas de una maratón cómo pueden ser: procesamiento de
+          string, estructuras de datos, programación dinámica, lógica matemática, teoría de números, entre otras. para
+          formalizar todo este proceso a través de una aplicación y un ajuste de metodologías y técnicas, se ve
+          necesario adaptar también el nivel en el que se encuentran los estudiantes, por esta razón la plataforma
+          brindará ayuda desde el nivel más básico, hasta el superior.
         </p>
       </div>
     </mat-card>
