--- a/src/app/components/judge/judge.component.html
+++ b/src/app/components/judge/judge.component.html
@@ -4,4 +4,6 @@
   <app-introduccion *ngIf="_navigationService.actualView == 'introduccion'"></app-introduccion>
   <app-categorias *ngIf="_navigationService.actualView == 'categorias'"></app-categorias>
   <app-scores *ngIf="_navigationService.actualView == 'scores'"></app-scores>
+  <app-lista-problemas *ngIf="_navigationService.actualView == 'listaProblemas'"></app-lista-problemas>
+  <app-resolver-problema *ngIf="_navigationService.actualView == 'resolverProblema'"></app-resolver-problema>
 </div>
