--- a/src/styles.less
+++ b/src/styles.less
@@ -6,7 +6,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   box-sizing: border-box;
 }
 
-
 .tab-container{
   padding: 20px;
+}
+
+.title{
+  font-size: 2em;
+  font-weight: bold;
 }
